# Chessism

./: .gitignore  BishopPiece.cc  BishopPiece.h  BoardState.cc  BoardState.h  CMakeCache.txt  CMakeLists.txt  ComputerPlayer.cc  ComputerPlayer.h  ComputerPlayer1.cc  ComputerPlayer1.h  ComputerPlayer2.cc  ComputerPlayer2.h  ComputerPlayer3.cc  ComputerPlayer3.h  ComputerPlayer4.cc  ComputerPlayer4.h  ComputerPlayer5.cc  ComputerPlayer5.h  Game.cc  Game.h  Graphical.h  HumanPlayer.cc  HumanPlayer.h  KingPiece.cc  KingPiece.h  KnightPiece.cc  KnightPiece.h  Makefile  Move.cc  Move.h  PawnPiece.h  Piece.cc  Piece.h  Player.cc  Player.h  QueenPiece.cc  QueenPiece.h  README.md  RookPiece.cc  (+10 more)
src/: BishopPiece.cc  BishopPiece.h  BoardGUI.cc  BoardGUI.h  BoardState.cc  BoardState.h  ComputerPlayer1.cc  ComputerPlayer1.h  ComputerPlayer2.cc  ComputerPlayer2.h  ComputerPlayer3.cc  ComputerPlayer3.h  ComputerPlayer4.cc  ComputerPlayer4.h  Game.cc  Game.h  Graphical.cc  Graphical.h  GraphicalTile.cc  GraphicalTile.h  HumanPlayer.cc  HumanPlayer.h  KingPiece.cc  KingPiece.h  KnightPiece.cc  KnightPiece.h  Move.cc  Move.h  Observer.h  PawnPiece.cc  PawnPiece.h  Piece.cc  Piece.h  PiecePixels.h  Player.h  QueenPiece.cc  QueenPiece.h  RookPiece.cc  RookPiece.h  Subject.cc  (+7 more)
src/graphics/: Graphical.cc  Graphical.h  GraphicalTile.cc
src/pieces/: BishopPiece.cc  BishopPiece.h  KingPiece.cc  KingPiece.h  KnightPiece.cc  KnightPiece.h  PawnPiece.cc  PawnPiece.h  Piece.cc  Piece.h  QueenPiece.cc  QueenPiece.h  RookPiece.cc  RookPiece.h
src/players/: ComputerPlayer.cc  ComputerPlayer.h  ComputerPlayer1.cc  ComputerPlayer1.h  ComputerPlayer2.cc  ComputerPlayer2.h  ComputerPlayer3.cc  ComputerPlayer3.h  ComputerPlayer4.cc  ComputerPlayer4.h  ComputerPlayer5.cc  ComputerPlayer5.h  HumanPlayer.cc  HumanPlayer.h  Player.cc  Player.h
src/tests/: basic.in  promote.in  puzzle1.in  puzzle2.in  puzzle3.in  puzzle4.in  puzzle5.in  puzzle6.in  puzzle7.in  suite.txt  test.sh
tests/: bug2.in  bug3.in  castle.in  enPassant.in  fiftyMoves.in  insufficient.in  promotion.in  random.in  suite.txt  test.sh
